# EoC-Lab-Camera

./: CMakeLists.txt  README.md  sdkconfig.backup  sdkconfig.defaults
Hardware/Contact Mic Board/: #auto_saved_files#  Contact Mic Board-B_Cu.gbr  Contact Mic Board-B_Mask.gbr  Contact Mic Board-B_Paste.gbr  Contact Mic Board-B_Silkscreen.gbr  Contact Mic Board-Edge_Cuts.gbr  Contact Mic Board-F_Cu.gbr  Contact Mic Board-F_Mask.gbr  Contact Mic Board-F_Paste.gbr  Contact Mic Board-F_Silkscreen.gbr  Contact Mic Board-In1_Cu.gbr  Contact Mic Board-In2_Cu.gbr  Contact Mic Board-job.gbrjob  Contact Mic Board.csv  Contact Mic Board.kicad_pcb  Contact Mic Board.kicad_prl  Contact Mic Board.kicad_pro  Contact Mic Board.kicad_sch  Prototype.kicad_pro  Prototype.kicad_sch
Hardware/Keyfob Board/: Keyfob Board.kicad_pcb  Keyfob Board.kicad_prl  Keyfob Board.kicad_pro  Keyfob Board.kicad_sch
Hardware/Main Board/: #auto_saved_files#  Main Board.kicad_pcb  Main Board.kicad_prl  Main Board.kicad_pro  Main Board.kicad_sch  Prototype.kicad_prl  fp-info-cache  ~Main Board.kicad_sch.lck
Hardware/Prototype/: Prototype.kicad_prl  Prototype.kicad_pro  Prototype.kicad_sch
components/button/: CMakeLists.txt  button.c  button.h
components/camera/: CMakeLists.txt  camera_ov2640.c  camera_ov2640.h
components/i2c_bus/: CMakeLists.txt  i2c_bus.c
components/mic/: CMakeLists.txt  mic_capture.c  mic_capture.h
components/oled/: CMakeLists.txt  oled_ssd1306.c  oled_ssd1306.h
main/: CMakeLists.txt  ble_trigger.c  ble_trigger.h  idf_component.yml  sd_card_example_main.c
(+37 files in other folders)
